# xfce4-docklike-plugin

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  NEWS  README.md  TODO.md  compile_commands.json  configure.ac  configure.ac.in  meson.build  meson_options.txt  xfce4-docklike-plugin.spec
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
po/: LINGUAS  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  id.po  ie.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  (+8 more)
src/: AppInfos.cpp  AppInfos.hpp  Dock.cpp  Dock.hpp  Garcon.cpp  Garcon.hpp  Group.cpp  Group.hpp  GroupMenu.cpp  GroupMenu.hpp  GroupMenuItem.cpp  GroupMenuItem.hpp  GroupWindow.cpp  GroupWindow.hpp  Helpers.cpp  Helpers.hpp  Hotkeys.cpp  Hotkeys.hpp  Makefile.am  Plugin.cpp  Plugin.hpp  Settings.cpp  Settings.hpp  SettingsDialog.cpp  SettingsDialog.hpp  State.ipp  State.tpp  Store.ipp  Store.tpp  Theme.cpp  Theme.hpp  Wnck.cpp  Wnck.hpp  Xfw.cpp  Xfw.hpp  _dialogs.ui  _dialogs.xml  _gresources.xml  docklike.desktop.in  meson.build  (+2 more)
themes/: example.css  gtk.css
